# rain

./: .clippy.toml  .containerignore  .gitignore  Cargo.toml  clippy.toml  herm.rain  hermetic.rain  main.rain  publish.rain  rain.toml  readme.md  root.rain  test.rain
ci/common/: Cargo.toml
ci/common/src/: github.rs  lib.rs
ci/coordinator/: Cargo.toml  Containerfile
ci/coordinator/.sqlx/: query-040b1b74723e00fe49a204ea34909db84bc0529e7ffda911d2519c2d314876f6.json  query-0d32853c9243950451a524dd889356925495be8089e97d712a1916fa615d86cb.json  query-8503f5df43ecb27e89d77ac09f5e46bec16272ee267e17673681cb5615678527.json  query-8a820982c7a47bf60bb02f92222b08cce763452b6ce3aa939c67125f21de2cdf.json  query-bf3c18f94cd2c941e9bb0c3ea87000fe6862d05b582b20b9ad743b11fd27239e.json  query-c38874b2d256a82ec2e718ed4172a4adc37f6b93f7cfb7e18bd70220c2425bfb.json
ci/coordinator/queries/: get_run.sql
ci/coordinator/src/: github.rs  main.rs  octocrab_extensions.rs  runner.rs  server.rs  storage.rs  tests.rs
ci/migrator/: Cargo.toml  Containerfile
ci/migrator/src/: main.rs
ci/web/: Cargo.toml  Containerfile
ci/web/.sqlx/: query-0329516c4f1f9ffd97a94137a1d01bd5c20127e6e310ffda8b3ffe5f8ea3b7a0.json  query-16faa02fa8de7cc8a643515b24f373b69561dbdce7c16b206f3d6490cc74ac8b.json  query-488d9003cd1ebcc918a523c691179dff90a712eb6caf9c4453ff912d5afb09a3.json  query-4aa2100eb5a8f65e6f44539c4e3680864dec1527b638ab2a6248602e1cf71e49.json  query-5662a9da5d1a222be6031c61dcc9b22ab37f671ed7a8987c80dfaddcf459edc6.json  query-5b7b92b5836c8fb33e09f81db25632daa810b2e18e69c5eb228b85400f9d279e.json  query-67ec17975490c0ce5b44df529d2f7e946bad0bdcf4664d1e38996d7ca9321998.json  query-71d2c6e5e160273d0c91236c78a418538cdb2d78a6152f34d217be0c5e8c76ea.json  query-7ed3d17f081070537b8a6b5bdd226918dc6be6aadb9c99fca8a0db71804c42ad.json  query-890bb3e24cdb51cce6355064139221463b2f883e6795c71f282d5a86184e64fb.json  query-a7d33e45907f52cffe3b600206b68b877ebfcdba85035abf37885fa9ba666c17.json  query-b7534a5d483f8e2b75ac97667e3dcf32850b02ea8150082536ce92c5a0fe42b3.json  query-bbeb433b3d6a9db31848a2176cdeb4692378cf7bb8c214217a96f9800006e165.json  query-c2d1a49805477a4bcb45a6cc335d02458d64168ee3a423bc5ad5a6f55529b970.json  query-c9a4ac6d2270a0311efd030f8b68caceed981372a8270709cfe2f1e10cec5296.json  query-dbb93a979de476ef9d9c2f1ff87cae7812ff6400e6f7dfab3117cc86caadc964.json  query-f166397929162532d5d4a454dc31ab1b8df2c0a95e41101fa6ae51a1b45a44ac.json
ci/web/assets/: script.js  style.css
ci/web/queries/: get_repo.sql  get_run.sql  list_repos.sql  list_runs.sql  list_runs_in_repo.sql
ci/web/src/: auth.rs  db.rs  github.rs  main.rs  pages.rs  pagination.rs  session.rs
ci/web/templates/: admin.html  adminpage.html  base.html  home.html  homepage.html  landing.html  profile.html  repo.html  repos.html  run.html  runpage.html  runs.html  runs_table.html
ci_test/: Cargo.toml
ci_test/src/: main.rs
ci_test/testdata/: push_main.json
cli/: Cargo.toml
cli/src/: client.rs  exe.rs  main.rs  msg.rs  server.rs  template_main.rain
cli/src/remote/: client.rs  msg.rs  server.rs
core/: Cargo.toml  build.rs
core/examples/areas/: area.rain
core/examples/errors/: throwing.rain
core/examples/helloworld/: hello.rain
core/examples/imports/: bar.rain  foo.rain  test.rain
core/examples/run/: foo
core/src/: append_vec.rs  area.rs  cache.rs  config.rs  driver.rs  error.rs  file_system.rs  ipc.rs  lib.rs
core/src/afs/: error.rs  file.rs  mod.rs
core/src/ast/: display.rs  error.rs  mod.rs  parser.rs  test.rs
core/src/cache/: persistent.rs
core/src/ir/: mod.rs
core/src/remote/: client.rs  msg.rs  server.rs
core/src/runner/: error.rs  internal.rs  mod.rs  value.rs  value_impl.rs
core/src/tokens/: stream.rs  test.rs
core/tests/: cache.rs  errors.rs  examples.rs  scripts.rs
core/tests/errors/: conflicting_declarations.rain  fail_let_destructure_type_check.rain  fail_let_type_check.rain  fail_type_check.rain  private_declaration.rain  record_type_check.rain  throw.rain
core/tests/scripts/: addition.rain  any_type.rain  binary_operators.rain  cache.rain  cache_deps.rain  closure.rain  complex_closures.rain  create_area.rain  destructure.rain  destructure_import.rain  equality.rain  fib.rain  fn_call.rain  foo.rain  generated_vs_local.rain  import.rain  internal.rain  internal_import.rain  internal_print.rain  local_type_spec.rain  local_var.rain  raw_string.rain  record_type_check.rain  string_add.rain  strings.rain  type_check_inner.rain  type_checks.rain  unary_operators.rain  underscore.rain  utf-8.rain  utf8.rain
core/tests/snapshots/: errors__fail_let_destructure_type_check.snap  errors__fail_let_type_check.snap  errors__fail_type_check.snap  errors__private_declaration.snap  errors__record_type_check.snap  errors__throw.snap  scripts__addition.snap  scripts__any_type.snap  scripts__binary_operators.snap  scripts__cache_closures.snap  scripts__cache_deps.snap  scripts__closure.snap  scripts__complex_closures.snap  scripts__create_area.snap  scripts__destructure.snap  scripts__destructure_import.snap  scripts__equality.snap  scripts__fib.snap  scripts__fn_call.snap  (+16 more)
lang/: Cargo.toml  bar.rain  foo.rain  test.rain
lang/src/: area.rs  config.rs  driver.rs  error.rs  lib.rs  local_span.rs  span.rs
lang/tests/: examples.rs  scripts.rs
rain-lang/: Cargo.toml
rain-lang/src/: ast.rs  cache.rs  config.rs  error.rs  exec.rs  leaf.rs  lib.rs  manifest.rs  path.rs  source.rs  tokens.rs  utils.rs
rain-lang/tests/: errors.rs  prints.rs  scripts.rs
rain-lsp/: Cargo.toml
rain-lsp/src/: comms.rs  json_rpc.rs  main.rs  server.rs
ruipc/: Cargo.toml
ruipc/src/: lib.rs  tests.rs  unix.rs  windows.rs
smee_rs/: Cargo.toml  main.rain
smee_rs/src/: lib.rs  main.rs
tree-sitter-rain/: Cargo.toml  _.rain  example-file.rain  grammar.js  install-helix.sh  justfile  package-lock.json  package.json  tree-sitter.json
tree-sitter-rain/queries/: highlights.scm
tree-sitter-rain/src/: grammar.json  node-types.json  parser.c
web_editor/: Cargo.toml
web_editor/public/: index.html
web_editor/src/: lib.rs
(+420 files in other folders)
