[workspace]
members = [
  "core",
  "lang",
  "smee-rs",
  "ci-test",
  "cli",
  "web-editor",
]
resolver = "2"

[profile.release]
lto = true
panic = "abort"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["Ruairidh Williamson"]
publish = false

[workspace.lints.rust]
unsafe_code = "warn"
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Cargo
# cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.5"
insta = { version = "1.39.0", features = ["colors"], default-features = false }
libc = "0.2.169"
log = "0.4.22"
lru = "0.12.4"
num-bigint = "0.4.6"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
test-log = "0.2.17"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1.40"
uuid = { version = "1.8", features = ["v4", "fast-rng", "js"] }
web-time = "1.1.0"
