[workspace]
members = [
  "core",
  "lang",
  "cli",
  "ruipc",
  "poison_panic",
  "ci/coordinator",
]
resolver = "3"

[profile.release]
lto = true
panic = "abort"

[workspace.package]
version = "0.2.1-pre"
edition = "2024"
rust-version = "1.87"
authors = ["Ruairidh Williamson"]
publish = false

[workspace.lints.clippy]
# Cargo
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"
useless_let_if_seq = "allow"
non_send_fields_in_send_ty = "allow"
cognitive_complexity = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
map_unwrap_or = "allow"
unnecessary_debug_formatting = "allow"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
insta = { version = "1.39.0", features = ["colors"], default-features = false }
libc = "0.2.169"
log = "0.4.22"
num-bigint = { version = "0.4.6", features = ["serde"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
termcolor = "1.4.1"
test-log = "0.2.17"
thiserror = "2.0"
toml = "0.8.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "js", "serde"] }
indexmap = { version = "2.8.0", features = ["serde"] }
ureq = { version = "3.0.12", features = ["json"] }
