[package]
name = "ci-test"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false

# [lints]
# workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true

axum = { version = "0.7.4", features = ["tracing"] }
axum-test = "15.3.0"
octocrab = { version = "0.43.0" }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
