[package]
name = "rain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
humansize = "2.1.3"
inquire = "0.7.5"
log.workspace = true
rain-core = { path = "../core" }
serde.workspace = true
termcolor.workspace = true
thiserror.workspace = true
ciborium = "0.2.2"
ruipc.path = "../ruipc"
uuid.workspace = true
chrono.workspace = true
poison_panic.path = "../poison_panic"
