[package]
name = "rain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
ciborium = "0.2.2"
clap.workspace = true
env_logger.workspace = true
humansize = "2.1.3"
inquire = "0.7.5"
log.workspace = true
poison_panic.path = "../poison_panic"
rain-core = { path = "../core" }
ruipc.path = "../ruipc"
serde_json.workspace = true
serde.workspace = true
termcolor.workspace = true
thiserror.workspace = true
uuid.workspace = true
