[package]
name = "rain-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base16 = "0.2.1"
chrono.workspace = true
dircpy = { version = "0.3.19", default-features = false }
dirs = "6.0.0"
flate2 = "1.1.0"
libc.workspace = true
liblzma = "0.3.6"
log.workspace = true
lru = "0.13.0"
num-bigint = "0.4.6"
poison_panic.path = "../poison_panic"
serde_json.workspace = true
rain-lang.path = "../lang"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde.workspace = true
sha2 = "0.10.8"
tar = "0.4.44"
thiserror.workspace = true
uuid.workspace = true
web-time.workspace = true
zip = "2.2.0"
indexmap.workspace = true

[dev-dependencies]
insta.workspace = true
quickcheck_macros.workspace = true
quickcheck.workspace = true
test-log.workspace = true
