[package]
name = "rain-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
base16 = "0.2.1"
chrono.workspace = true
dirs = "6.0.0"
flate2 = "1.1.0"
git2 = "0.20.2"
git-lfs-rs.workspace = true
ignore = "0.4.23"
indexmap.workspace = true
libc.workspace = true
liblzma = "0.4.1"
log.workspace = true
lru = "0.16.0"
num-bigint = "0.4.6"
poison_panic.path = "../poison_panic"
rain-lang.path = "../lang"
serde_json.workspace = true
serde.workspace = true
sha2 = "0.10.8"
tar = "0.4.44"
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
uuid.workspace = true
zip = { version = "4.0.0", features = ["deflate"], default-features = false }
hex = "0.4.3"

[dev-dependencies]
insta.workspace = true
quickcheck_macros.workspace = true
quickcheck.workspace = true
test-log.workspace = true
