[package]
name = "rain-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
lru = "0.13.0"
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
termcolor.workspace = true
thiserror.workspace = true
uuid.workspace = true
web-time.workspace = true
toml = "0.8.20"
indexmap = { version = "2.8.0", features = ["serde"] }
regex = "1.11.1"
poison_panic.path = "../poison_panic"

[dev-dependencies]
insta.workspace = true
quickcheck_macros.workspace = true
quickcheck.workspace = true
