[package]
name = "rain-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
indexmap = { version = "2.8.0", features = ["serde"] }
log.workspace = true
num-bigint.workspace = true
poison_panic.path = "../poison_panic"
regex = "1.11.1"
serde_json.workspace = true
serde.workspace = true
termcolor.workspace = true
thiserror.workspace = true
toml = "0.8.20"
uuid.workspace = true
web-time.workspace = true

[dev-dependencies]
insta.workspace = true
quickcheck_macros.workspace = true
quickcheck.workspace = true
