[package]
name = "rain-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
indexmap.workspace = true
log.workspace = true
num-bigint.workspace = true
regex = "1.11.1"
serde_json.workspace = true
serde.workspace = true
target-lexicon = "0.13.2"
termcolor.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-rain.path = "../tree-sitter-rain"
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
quickcheck_macros.workspace = true
quickcheck.workspace = true
