[package]
name = "rain-lang"
description = "Rain language implementation"
version.workspace = true
edition.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = "warn"
cargo = "warn"
missing_const_for_fn = "allow"
result_large_err = "allow"
print_stdout = "warn"
print_stderr = "warn"
# unwrap_used = "warn"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
toml.workspace = true

dirs = "5.0"
enum-kinds = "0.5"
ordered_hash_map = "0.4"
range-enum = { path = "../range-enum" }
unicode-width = "0.1"
