[package]
name = "rain-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
lsp-types = "0.97.0"
rain-lang.path = "../lang"
serde_json.workspace = true
serde.workspace = true
tree-sitter.workspace = true

[lints]
workspace = true
