[package]
name = "ruipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
libc.workspace = true

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.60.0", features = [
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
  "Win32_System_IO",
]}

[lints]
workspace = true
