[package]
name = "smee-rs"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
eventsource-client = "0.14.0"
futures = "0.3.30"
log.workspace = true
reqwest = "0.12.5"
serde_json.workspace = true
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"], optional = true }
url.workspace = true

[[bin]]
name = "smee-rs"
required-features = ["clap", "tokio"]
