[package]
name = "tree-sitter-rain"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rain grammar for tree-sitter"
license = "None"
keywords = ["incremental", "parsing", "tree-sitter", "rain"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-rain"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter.workspace = true
