[package]
name = "rain-ci-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.8.6", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
