[package]
name = "rain-ci-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
sqlx = { version = "0.8.6", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
uuid.workspace = true
git-lfs-rs.workspace = true
ipnet = { version = "2.11.0", features = ["serde"] }
http = "1"
jsonwebtoken = { version = "10.0.0", default-features = false , features = ["use_pem", "rust_crypto"] }
serde_json.workspace = true
serde.workspace = true
reqwest = { version = "0.12.24", features = ["rustls-tls", "charset", "http2", "json"], default-features = false }
dotenvy.workspace = true
tokio.workspace = true

[lints]
workspace = true
