[package]
name = "rain-ci-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git-lfs-rs.workspace = true
http = "1"
ipnet = { version = "2.11.0", features = ["serde"] }
jsonwebtoken = { version = "10.0.0", default-features = false , features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.13.1", features = ["rustls", "charset", "http2", "json"], default-features = false }
serde_json.workspace = true
serde.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
tokio.workspace = true

[dev-dependencies]
dotenvy.workspace = true

[lints]
workspace = true
