[package]
name = "rain-ci-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bytes.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy = "0.4.2"
hex = "0.4.3"
http = "1"
httparse = "1.10.1"
ipnet = { version = "2.11.0", features = ["serde"] }
jsonwebtoken = { version = "9.3.1", default-features = false , features = ["use_pem"]}
log.workspace = true
poison_panic.path = "../../poison_panic"
rain-core = { path = "../../core" }
rain-lang = { path = "../../lang" }
ring = { version = "0.17.14", features = ["std"] }
serde_json.workspace = true
serde.workspace = true
strip-ansi-escapes = "0.2.1"
ureq = { version = "3.0.12", features = ["json"] }
url.workspace = true
