[package]
name = "rain-ci-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bytes.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy = "0.4.2"
git-lfs-rs.workspace = true
hex = "0.4.3"
http = "1"
httparse = "1.10.1"
ipnet = { version = "2.11.0", features = ["serde"] }
jsonwebtoken = { version = "10.0.0", default-features = false , features = ["use_pem", "rust_crypto"] }
log.workspace = true
poison_panic.path = "../../poison_panic"
rain-core = { path = "../../core" }
rain-lang = { path = "../../lang" }
ring = { version = "0.17.14", features = ["std"] }
serde_json.workspace = true
serde.workspace = true
strip-ansi-escapes = "0.2.1"
ureq.workspace = true
url.workspace = true
rocksdb = "0.24.0"
postcard = { version = "1.1.3", features = ["use-std"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-log.workspace = true
