[package]
name = "rain-ci-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bytes.workspace = true
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
git-lfs-rs.workspace = true
hex = "0.4.3"
http = "1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.18", features = ["full"] }
ipnet = { version = "2.11.0", features = ["serde"] }
jsonwebtoken = { version = "10.0.0", default-features = false , features = ["use_pem", "rust_crypto"] }
log.workspace = true
poison_panic.path = "../../poison_panic"
postcard = { version = "1.1.3", features = ["use-std"] }
rain-ci-common.path = "../common"
rain-core = { path = "../../core" }
rain-lang = { path = "../../lang" }
reqwest = { version = "0.12.24", features = ["json"] }
ring = { version = "0.17.14", features = ["std"] }
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
strip-ansi-escapes = "0.2.1"
tokio.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true
secrecy.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-log.workspace = true
