[package]
name = "rain-ci-migrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
envy = "0.4.2"
postgres-types = { version = "0.2.11", features = ["derive"] }
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
rain-ci-common.path = "../common"
rustc-stable-hash = "0.1.2"
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
