[package]
name = "rain-ci-migrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
envy.workspace = true
rain-ci-common.path = "../common"
rustc-stable-hash = "0.1.2"
secrecy.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
