[package]
name = "rain-ci-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
askama = { version = "0.14.0", features = ["serde_json"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
axum = { version = "0.8.6", features = ["macros"] }
constant_time_eq = "0.4.2"
deadpool-postgres = "0.14.1"
dotenvy.workspace = true
env_logger.workspace = true
envy = "0.4.2"
log.workspace = true
oauth2 = "5.0.0"
postgres-types = { version = "0.2.11", features = ["derive"] }
rain-ci-common.path = "../common"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
