[package]
name = "rain-ci-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
askama = { version = "0.14.0", features = ["serde_json"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
axum = { version = "0.8.6", features = ["macros"] }
constant_time_eq = "0.4.2"
dotenvy.workspace = true
env_logger.workspace = true
envy = "0.4.2"
log.workspace = true
oauth2 = "5.0.0"
rain-ci-common.path = "../common"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "derive", "uuid", "chrono" ] }
tokio = { version = "1.48.0", features = ["full"] }
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
