[package]
name = "rain-ci-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
askama = { version = "0.15.1", features = ["serde_json"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
axum = { version = "0.8.6", features = ["macros"] }
chrono.workspace = true
constant_time_eq = "0.4.2"
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
log.workspace = true
oauth2 = "5.0.0"
rain-ci-common.path = "../common"
secrecy.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
jsonwebtoken = { version = "10.0.0", default-features = false , features = ["use_pem", "rust_crypto"] }

[lints]
workspace = true
